completed lower portion layout

--- a/index.html
+++ b/index.html
@@ -30,11 +30,26 @@
     </div>
 
     <div class="product-pages-wrapper">
-      <img src="./assets/bottom section images/thinx_productpage_-04.jpg" alt="Shop Hiphugger">
-      <img src="./assets/bottom section images/thinx_productpage_-03.jpg" alt="Shop Cheeky">
-      <img src="./assets/bottom section images/thinx_productpage_-05.jpg" alt="Shop Thong">
-      <img src="./assets/bottom section images/thinx_productpage_-07.jpg" alt="Shop Sport">
-      <img src="./assets/bottom section images/thinx_productpage_-08.jpg" alt="Shop Boysport">
+      <div class="product-1">
+        <img src="./assets/bottom section images/thinx_productpage_-04.jpg" alt="Shop Hiphugger">
+      </div>
+
+      <div class="product-2">
+        <img src="./assets/bottom section images/thinx_productpage_-03.jpg" alt="Shop Cheeky">
+      </div>
+
+      <div class="product-3">
+        <img src="./assets/bottom section images/thinx_productpage_-05.jpg" alt="Shop Thong">
+      </div>
+
+      <div class="product-4">
+        <img src="./assets/bottom section images/thinx_productpage_-07.jpg" alt="Shop Sport">
+      </div>
+
+      <div class="product-5">
+        <img src="./assets/bottom section images/thinx_productpage_-08.jpg" alt="Shop Boysport">
+      </div>
+
     </div>
 
   </body>
