added all text content and light styling

--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
     <div class="product-landing-wrapper">
 
       <div class="product-description-wrapper">
-        <div class="sticky-wrapper">HI-WAIST</div>
+        <div class="sticky-wrapper left">
+          <h1 class="header">HI-WAIST</h1>
+          <h2 class="sub-header">Heavy days. Holds up to 2 tampons worth.</h2>
+          <h2 class="sub-header">The phrase "Treat yo'self" reaches new belly-button brushing heights with the HI-Waist, and it's here just in time for cuffing season.</h2>
+        </div>
       </div>
 
       <div class="product-image-wrapper">
@@ -24,7 +28,27 @@
       </div>
 
       <div class="product-purchase-wrapper">
-        <div class="sticky-wrapper">$35.00</div>
+        <div class="sticky-wrapper right">
+          <h1 class="price">$35.00</h1>
+          <div class="color-buttons flex">
+            <div class="color">color</div>
+            <div class="color">black</div>
+            <div class="color">beige</div>
+          </div>
+          <div class="quantity flex">
+            <div class="minus">-</div>
+            <div class="quantiy">quantity (1)</div>
+            <div class="plus">+</div>
+          </div>
+          <div class="size flex">
+            <div class="size">size</div>
+            <div class="dropdown">^</div>
+          </div>
+          <div class="">what's my size?</div>
+          <div class="">add to cart</div>
+          <h2 class="">build a cycle set and save up to 20%</h2>
+
+        </div>
       </div>
 
     </div>
