finished top section

--- a/index.html
+++ b/index.html
@@ -8,50 +8,53 @@
 
   <body>
 
-    <div class="product-landing-wrapper">
+    <div class="top-section">
+      <div class="product-landing-wrapper">
 
-      <div class="product-description-wrapper">
-        <div class="sticky-wrapper left">
-          <h1 class="header">HI-WAIST</h1>
-          <h2 class="sub-header">Heavy days. Holds up to 2 tampons worth.</h2>
-          <h2 class="sub-header">The phrase "Treat yo'self" reaches new belly-button brushing heights with the HI-Waist, and it's here just in time for cuffing season.</h2>
+        <div class="product-description-wrapper">
+          <div class="sticky-wrapper left">
+            <h1 class="header">HI-WAIST</h1>
+            <h2 class="sub-header">Heavy days. Holds up to 2 tampons worth.</h2>
+            <h2 class="sub-header">The phrase "Treat yo'self" reaches new belly-button brushing heights with the HI-Waist, and it's here just in time for cuffing season.</h2>
+          </div>
         </div>
-      </div>
 
-      <div class="product-image-wrapper">
-        <img src="./assets/top-section-images/highwaist_black_front_2_1024x1024.jpg" alt="Highwaist Black">
-        <img src="./assets/top-section-images/highwaist_black_front_3_1024x1024.jpg" alt="Highwaist Black">
-        <img src="./assets/top-section-images/highwaist_black_front_4_1024x1024.jpg" alt="Highwaist Black">
-        <img src="./assets/top-section-images/highwaist_black_front_1024x1024.jpg" alt="Highwaist Black">
-        <img src="./assets/top-section-images/highwaist_black_side_1024x1024.jpg" alt="Highwaist Black">
-        <img src="./assets/top-section-images/highwaist_black_back_1024x1024.jpg" alt="Highwaist Black">
-      </div>
-
-      <div class="product-purchase-wrapper">
-        <div class="sticky-wrapper right">
-          <h1 class="price">$35.00</h1>
-          <div class="color-buttons flex">
-            <div class="color">color</div>
-            <div class="color">black</div>
-            <div class="color">beige</div>
-          </div>
-          <div class="quantity flex">
-            <div class="minus">-</div>
-            <div class="quantiy">quantity (1)</div>
-            <div class="plus">+</div>
-          </div>
-          <div class="size flex">
-            <div class="size">size</div>
-            <div class="dropdown">^</div>
-          </div>
-          <div class="">what's my size?</div>
-          <div class="">add to cart</div>
-          <h2 class="">build a cycle set and save up to 20%</h2>
-
+        <div class="product-image-wrapper">
+          <img src="./assets/top-section-images/highwaist_black_front_2_1024x1024.jpg" alt="Highwaist Black">
+          <img src="./assets/top-section-images/highwaist_black_front_3_1024x1024.jpg" alt="Highwaist Black">
+          <img src="./assets/top-section-images/highwaist_black_front_4_1024x1024.jpg" alt="Highwaist Black">
+          <img src="./assets/top-section-images/highwaist_black_front_1024x1024.jpg" alt="Highwaist Black">
+          <img src="./assets/top-section-images/highwaist_black_side_1024x1024.jpg" alt="Highwaist Black">
+          <img src="./assets/top-section-images/highwaist_black_back_1024x1024.jpg" alt="Highwaist Black">
         </div>
-      </div>
 
+        <div class="product-purchase-wrapper">
+          <div class="sticky-wrapper right">
+            <h1 class="price">$35.00</h1>
+            <div class="color-buttons flex">
+              <div class="color">color</div>
+              <div class="color black">black  ✓</div>
+              <div class="color beige">beige</div>
+            </div>
+            <div class="quantity flex">
+              <div class="selector minus">-</div>
+              <div class="quantity-counter">quantity (1)</div>
+              <div class="selector plus">+</div>
+            </div>
+            <div class="size flex">
+              <div class="size-choice">size</div>
+              <div class="dropdown"><div class="carrot">⌄</div></div>
+            </div>
+            <div class="size-link">what's my size?</div>
+            <h2 class="add-to-cart">add to cart</h2>
+            <h2 class="cycle-link">build a cycle set and save up to 20%</h2>
+          </div>
+        </div>
+
+      </div>
     </div>
+
+
 
     <div class="product-pages-wrapper">
       <div class="product-1">
