layout completed, working on responsive updates

--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
               <div class="size-choice">size</div>
               <div class="dropdown"><div class="carrot">⌄</div></div>
             </div>
-            <div class="size-link">what's my size?</div>
+            <a href="#"><div class="size-link">what's my size?</div></a>
             <h2 class="add-to-cart">add to cart</h2>
-            <h2 class="cycle-link">build a cycle set and save up to 20%</h2>
+            <a href="#"><h2 class="cylce-link">build a cycle set and save up to 20%</h2></a>
           </div>
         </div>
 
@@ -57,24 +57,36 @@
 
 
     <div class="product-pages-wrapper">
-      <div class="product-1">
+      <div id="product-1" class="horizontal">
         <img src="./assets/bottom-section-images/thinx_productpage_-04.jpg" alt="Shop Hiphugger">
+        <a href="#"><h2 class="product-link">Shop Hiphugger</h2></a>
+        <div class="product-description">heavy days</div>
       </div>
 
-      <div class="product-2">
+      <div id="product-2">
         <img src="./assets/bottom-section-images/thinx_productpage_-03.jpg" alt="Shop Cheeky">
+        <a href="#"><h2 class="product-link">Shop Cheeky</h2></a>
+        <div class="product-description">light days</div>
       </div>
 
-      <div class="product-3">
-        <img src="./assets/bottom-section-images/thinx_productpage_-05.jpg" alt="Shop Thong">
+      <div id="product-3">
+        <div class="product-3-wrapper">
+          <img src="./assets/bottom-section-images/thinx_productpage_-05.jpg" alt="Shop Thong">
+          <a href="#"><h2 class="product-link">Shop Thong</h2></a>
+          <div class="product-description">lightest days</div>
+        </div>
       </div>
 
-      <div class="product-4">
+      <div id="product-4" class="horizontal">
         <img src="./assets/bottom-section-images/thinx_productpage_-07.jpg" alt="Shop Sport">
+        <a href="#"><h2 class="product-link">Shop Sport</h2></a>
+        <div class="product-description">medium days</div>
       </div>
 
-      <div class="product-5">
+      <div id="product-5">
         <img src="./assets/bottom-section-images/thinx_productpage_-08.jpg" alt="Shop Boysport">
+        <a href="#"><h2 class="product-link">Shop BoySport</h2></a>
+        <div class="product-description">light days</div>
       </div>
 
     </div>
