--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <h1 class="price">$35.00</h1>
             <div class="color-buttons flex">
               <div class="color">color</div>
-              <div class="color black">black  ✓</div>
+              <div class="color black">black  <span class="check">✔</span></div>
               <div class="color beige">beige</div>
             </div>
             <div class="quantity flex">
