--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Page Title</title>
     <link rel="stylesheet" href="styles.css">
   </head>
@@ -63,7 +64,7 @@
         <div class="product-description">heavy days</div>
       </div>
 
-      <div id="product-2">
+      <div id="product-2" class="vertical">
         <img src="./assets/bottom-section-images/thinx_productpage_-03.jpg" alt="Shop Cheeky">
         <a href="#"><h2 class="product-link">Shop Cheeky</h2></a>
         <div class="product-description">light days</div>
@@ -83,9 +84,9 @@
         <div class="product-description">medium days</div>
       </div>
 
-      <div id="product-5">
+      <div id="product-5" class="vertical">
         <img src="./assets/bottom-section-images/thinx_productpage_-08.jpg" alt="Shop Boysport">
-        <a href="#"><h2 class="product-link">Shop BoySport</h2></a>
+        <a href="#"><h2 class="product-link">Shop Boyshort</h2></a>
         <div class="product-description">light days</div>
       </div>
 
