everything is done, just need to test

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <h1 class="price">$35.00</h1>
             <div class="color-buttons flex">
               <div class="color">color</div>
-              <div class="color black">black  <span class="check"><img src="https://cdn.shopify.com/s/files/1/0578/7201/files/icon-check.svg?412249" alt="Black"></span></div>
+              <div class="color black">black <img src="https://cdn.shopify.com/s/files/1/0578/7201/files/icon-check.svg?412249" alt="Black"></div>
               <div class="color beige">beige</div>
             </div>
             <div class="quantity flex">
@@ -59,7 +59,7 @@
             </div>
             <a href="#"><div class="size-link">what's my size?</div></a>
             <h2 class="add-to-cart">add to cart</h2>
-            <a href="#"><h2 class="cylce-link">build a cycle set and save up to 20%</h2></a>
+            <a href="#"><h2 class="cycle-link">build a cycle set and save up to 20%</h2></a>
           </div>
         </div>
 
