added zoom function

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
 
   <body>
-
+   <div class="zoom"></div>
     <div class="top-section">
       <div class="product-landing-wrapper">
 
@@ -50,7 +50,7 @@
             </div>
             <div class="quantity flex">
               <div class="selector minus">-</div>
-              <div class="quantity-counter">quantity (1)</div>
+              <div class="selector">quantity (1)</div>
               <div class="selector plus">+</div>
             </div>
             <div class="size flex">
@@ -104,15 +104,7 @@
 
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
-
-    <script type="text/javascript">
-      $(document).ready(function(){
-        $('.product-image-wrapper-mobile').slick({
-          dots: true,
-          slidesToShow: 1,
-        });
-      });
-    </script>
+    <script type="text/javascript" src="script.js"></script>
 
   </body>
 </html>
