added qty functionality

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             </div>
             <div class="quantity flex">
               <div class="selector minus">-</div>
-              <div class="selector">quantity (1)</div>
+              <div class="selector">quantity (<span class="counter">1</span>)</div>
               <div class="selector plus">+</div>
             </div>
             <div class="size flex">
