size selector is working

--- a/index.html
+++ b/index.html
@@ -45,17 +45,25 @@
             <h1 class="price">$35.00</h1>
             <div class="color-buttons flex">
               <div class="color">color</div>
-              <div class="color black">black <img src="https://cdn.shopify.com/s/files/1/0578/7201/files/icon-check.svg?412249" alt="Black"></div>
-              <div class="color beige">beige</div>
+              <div class="color black">black <span class="tick"><img src="https://cdn.shopify.com/s/files/1/0578/7201/files/icon-check.svg?412249" alt="Black"></span></div>
+              <div class="color beige">beige <span class="tick"></span></div>
             </div>
             <div class="quantity flex">
               <div class="selector minus">-</div>
               <div class="selector">quantity (<span class="counter">1</span>)</div>
               <div class="selector plus">+</div>
             </div>
-            <div class="size flex">
+            <div class="size flex dropdown">
               <div class="size-choice">size</div>
               <div class="dropdown"><div class="carrot">⌄</div></div>
+              <div class="dropdown-content">
+                <li>Extra Small</li>
+                <li>Small</li>
+                <li>Medium</li>
+                <li>Large</li>
+                <li>Extra Large</li>
+              </div>
+
             </div>
             <a href="#"><div class="size-link">what's my size?</div></a>
             <h2 class="add-to-cart">add to cart</h2>
