done, need to test on other browsers

--- a/index.html
+++ b/index.html
@@ -53,20 +53,21 @@
               <div class="selector">quantity (<span class="counter">1</span>)</div>
               <div class="selector plus">+</div>
             </div>
-            <div class="size flex dropdown">
-              <div class="size-choice">size</div>
-              <div class="dropdown"><div class="carrot">⌄</div></div>
-              <div class="dropdown-content">
-                <li>Extra Small</li>
-                <li>Small</li>
-                <li>Medium</li>
-                <li>Large</li>
-                <li>Extra Large</li>
+            <div class="size-button">
+              <div class="size flex">
+                <div class="size-choice">size</div>
+                <div class="dropdown"><div class="carrot">⌄</div></div>
               </div>
-
+              <div class="dropdown-content">
+                <li>extra small</li>
+                <li>small</li>
+                <li>medium</li>
+                <li>large</li>
+                <li>extra large</li>
+              </div>
             </div>
             <a href="#"><div class="size-link">what's my size?</div></a>
-            <h2 class="add-to-cart">add to cart</h2>
+            <a href="#"><h2 class="add-to-cart">add to cart</h2></a>
             <a href="#"><h2 class="cycle-link">build a cycle set and save up to 20%</h2></a>
           </div>
         </div>
