tested on safari, looks good

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
         <div class="product-description-wrapper">
           <div class="sticky-wrapper left">
-            <h1 class="header">HI-WAIST</h1>
+            <h1 class="header">HI‐WAIST</h1>
             <h2 class="sub-header">Heavy days. Holds up to 2 tampons worth.</h2>
             <h2 class="sub-header">The phrase "Treat yo'self" reaches new belly-button brushing heights with the HI-Waist, and it's here just in time for cuffing season.</h2>
           </div>
