last final adjustments

--- a/index.html
+++ b/index.html
@@ -59,11 +59,12 @@
                 <div class="dropdown"><div class="carrot">⌄</div></div>
               </div>
               <div class="dropdown-content">
-                <li>extra small</li>
+                <li>x small</li>
                 <li>small</li>
                 <li>medium</li>
                 <li>large</li>
-                <li>extra large</li>
+                <li>x large</li>
+                <li>xx large</li>
               </div>
             </div>
             <a href="#"><div class="size-link">what's my size?</div></a>
