added notation to describe JS

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   </head>
 
   <body>
-   <div class="zoom"></div>
-    <div class="top-section">
+
+      <div class="zoom"></div>
       <div class="product-landing-wrapper">
 
         <div class="product-image-wrapper-mobile">
@@ -24,14 +24,14 @@
         </div>
 
         <div class="product-description-wrapper">
-          <div class="sticky-wrapper left">
+          <div class="side-sections-wrapper left">
             <h1 class="header">HI‐WAIST</h1>
             <h2 class="sub-header">Heavy days. Holds up to 2 tampons worth.</h2>
             <h2 class="sub-header">The phrase "Treat yo'self" reaches new belly-button brushing heights with the HI-Waist, and it's here just in time for cuffing season.</h2>
           </div>
         </div>
 
-        <div class="product-image-wrapper-desktop">
+        <div class="product-scrolling-image-wrapper-desktop">
           <img src="./assets/top-section-images/highwaist_black_front_2_1024x1024.jpg" alt="Highwaist Black">
           <img src="./assets/top-section-images/highwaist_black_front_3_1024x1024.jpg" alt="Highwaist Black">
           <img src="./assets/top-section-images/highwaist_black_front_4_1024x1024.jpg" alt="Highwaist Black">
@@ -41,7 +41,7 @@
         </div>
 
         <div class="product-purchase-wrapper">
-          <div class="sticky-wrapper right">
+          <div class="side-sections-wrapper right">
             <h1 class="price">$35.00</h1>
             <div class="color-buttons flex">
               <div class="color">color</div>
@@ -73,7 +73,6 @@
           </div>
         </div>
 
-      </div>
     </div>
 
 
